# daywatch

./: Cargo.toml  README.md
daywatch/: Cargo.toml
daywatch-cli/: Cargo.toml
daywatch-core/: Cargo.toml
daywatch-newtypes/: Cargo.toml  README.md
daywatch-newtypes/src/: lib.rs  money.rs  time.rs  user_info.rs  uuid.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
