[package]
name = "daywatch-newtypes"
version = "0.1.0"
edition = "2021"

[features]
default = ["money", "user-info"]
user-info = []
money = []

[dependencies]
lazy_static = "1.4.0"
nutype = { version = "0.4.0", features = ["regex"] }
regex = "1.10.2"
rusty-money = { version = "0.4.1", features = ["iso", "crypto"] }
